update the code with navigation

--- a/web-cart.html
+++ b/web-cart.html
@@ -41,31 +41,31 @@
     <header class="bg-white border-b border-gray-200">
         <div class="max-w-[1180px] mx-auto px-4 h-20 flex items-center justify-between">
             <!-- Logo -->
-            <div class="flex items-center gap-2">
+            <a href="./web-main.html" class="flex items-center gap-2">
                 <div class="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center text-white text-xl">
                     <i class="fa-solid fa-bag-shopping"></i>
                 </div>
                 <span class="text-2xl font-bold text-blue-500 tracking-tight">Brand</span>
-            </div>
+            </a>
 
             <!-- Right Nav -->
             <div class="flex items-center gap-6">
-                <div class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
+                <a href="./web-main.html" class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
                     <i class="fa-solid fa-user text-lg"></i>
                     <span class="text-xs text-gray-400">Profile</span>
-                </div>
-                <div class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
+                </a>
+                <a href="./web-main.html" class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
                     <i class="fa-solid fa-comment-dots text-lg"></i>
                     <span class="text-xs text-gray-400">Message</span>
-                </div>
-                <div class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
+                </a>
+                <a href="./web-main.html" class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
                     <i class="fa-solid fa-heart text-lg"></i>
                     <span class="text-xs text-gray-400">Orders</span>
-                </div>
-                <div class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
+                </a>
+                <a href="./web-cart.html" class="flex flex-col items-center gap-1 cursor-pointer text-gray-500 hover:text-gray-800">
                     <i class="fa-solid fa-cart-shopping text-lg"></i>
                     <span class="text-xs text-gray-400">My cart</span>
-                </div>
+                </a>
             </div>
         </div>
     </header>
@@ -172,9 +172,9 @@
 
                         <!-- Bottom Actions -->
                         <div class="p-4 flex justify-between items-center">
-                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2.5 rounded-md text-sm font-medium shadow-sm flex items-center gap-2">
+                            <a href="./web-gridview.html" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2.5 rounded-md text-sm font-medium shadow-sm flex items-center gap-2">
                                 <i class="fa-solid fa-arrow-left"></i> Back to shop
-                            </button>
+                            </a>
                             <button class="border border-gray-200 bg-white hover:bg-gray-50 text-blue-600 px-4 py-2.5 rounded-md text-sm font-medium shadow-sm">
                                 Remove all
                             </button>
@@ -349,9 +349,9 @@
                     <p class="text-blue-100 text-sm">Have you ever finally just write dummy info</p>
                 </div>
                 <div class="relative z-10">
-                    <button class="bg-orange-500 hover:bg-orange-600 text-white font-medium px-5 py-2 rounded-md shadow-sm text-sm">
+                    <a href="./web-gridview.html" class="bg-orange-500 hover:bg-orange-600 text-white font-medium px-5 py-2 rounded-md shadow-sm text-sm">
                         Shop now
-                    </button>
+                    </a>
                 </div>
             </div>
 
@@ -375,11 +375,11 @@
                         Best information about the company gies here but now lorem ipsum is
                     </p>
                     <div class="flex gap-2">
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-facebook-f text-sm"></i></a>
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-twitter text-sm"></i></a>
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-linkedin-in text-sm"></i></a>
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-instagram text-sm"></i></a>
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-youtube text-sm"></i></a>
+                        <a href="./web-main.html" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-facebook-f text-sm"></i></a>
+                        <a href="./web-main.html" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-twitter text-sm"></i></a>
+                        <a href="./web-main.html" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-linkedin-in text-sm"></i></a>
+                        <a href="./web-main.html" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-instagram text-sm"></i></a>
+                        <a href="./web-main.html" class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i class="fa-brands fa-youtube text-sm"></i></a>
                     </div>
                 </div>
 
@@ -388,40 +388,40 @@
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">About</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">About Us</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Find store</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Categories</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Blogs</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">About Us</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Find store</a></li>
+                            <li><a href="./web-gridview.html" class="hover:text-blue-600">Categories</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Blogs</a></li>
                         </ul>
                     </div>
 
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">Partnership</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">About Us</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Find store</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Categories</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Blogs</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">About Us</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Find store</a></li>
+                            <li><a href="./web-gridview.html" class="hover:text-blue-600">Categories</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Blogs</a></li>
                         </ul>
                     </div>
 
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">Information</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">Help Center</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Money Refund</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Shipping</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Contact us</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Help Center</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Money Refund</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Shipping</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Contact us</a></li>
                         </ul>
                     </div>
 
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">For users</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">Login</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Register</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Settings</a></li>
-                            <li><a href="#" class="hover:text-blue-600">My Orders</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Login</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Register</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Settings</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">My Orders</a></li>
                         </ul>
                     </div>
                 </div>
@@ -430,14 +430,14 @@
                 <div class="w-full sm:w-auto">
                     <h4 class="font-medium text-gray-800 mb-3">Get app</h4>
                     <div class="flex flex-col gap-3">
-                        <a href="#" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
+                        <a href="./web-main.html" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
                             <i class="fa-brands fa-apple text-2xl"></i>
                             <div class="flex flex-col leading-none">
                                 <span class="text-[8px]">Download on the</span>
                                 <span class="text-xs font-semibold">App Store</span>
                             </div>
                         </a>
-                        <a href="#" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
+                        <a href="./web-main.html" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
                             <i class="fa-brands fa-google-play text-xl"></i>
                             <div class="flex flex-col leading-none">
                                 <span class="text-[8px]">GET IT ON</span>
