--- a/web-main.html
+++ b/web-main.html
@@ -45,7 +45,7 @@
         <div class="container mx-auto px-4 lg:px-6 max-w-[1200px]">
             <div class="flex items-center justify-between h-20 gap-8">
                 <!-- Logo -->
-                <a href="#" class="flex items-center gap-2 flex-shrink-0">
+                <a href="./web-main.html" class="flex items-center gap-2 flex-shrink-0">
                     <div class="w-10 h-10 bg-blue-600 rounded-lg flex items-center justify-center text-white text-xl">
                         <i class="fa-solid fa-bag-shopping"></i>
                     </div>
@@ -73,19 +73,19 @@
 
                 <!-- Actions -->
                 <div class="flex items-center gap-6 flex-shrink-0 text-gray-500 text-xs text-center">
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-blue-600">
+                    <a href="./web-main.html" class="flex flex-col items-center gap-1 hover:text-blue-600">
                         <i class="fa-solid fa-user text-lg"></i>
                         <span>Profile</span>
                     </a>
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-blue-600">
+                    <a href="./web-main.html" class="flex flex-col items-center gap-1 hover:text-blue-600">
                         <i class="fa-solid fa-message text-lg"></i>
                         <span>Message</span>
                     </a>
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-blue-600">
+                    <a href="./web-main.html" class="flex flex-col items-center gap-1 hover:text-blue-600">
                         <i class="fa-solid fa-heart text-lg"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-blue-600">
+                    <a href="./web-cart.html" class="flex flex-col items-center gap-1 hover:text-blue-600">
                         <i class="fa-solid fa-cart-shopping text-lg"></i>
                         <span>My cart</span>
                     </a>
@@ -99,14 +99,14 @@
         <div
             class="container mx-auto px-4 lg:px-6 max-w-[1200px] flex items-center justify-between h-12 text-sm font-medium">
             <div class="flex items-center gap-6 overflow-x-auto no-scrollbar">
-                <a href="#" class="flex items-center gap-2 hover:text-blue-600 whitespace-nowrap">
+                <a href="./web-gridview.html" class="flex items-center gap-2 hover:text-blue-600 whitespace-nowrap">
                     <i class="fa-solid fa-bars"></i> All category
                 </a>
-                <a href="#" class="hover:text-blue-600 whitespace-nowrap">Hot offers</a>
-                <a href="#" class="hover:text-blue-600 whitespace-nowrap">Gift boxes</a>
-                <a href="#" class="hover:text-blue-600 whitespace-nowrap">Projects</a>
-                <a href="#" class="hover:text-blue-600 whitespace-nowrap">Menu item</a>
-                <a href="#" class="flex items-center gap-1 hover:text-blue-600 whitespace-nowrap">
+                <a href="./web-gridview.html" class="hover:text-blue-600 whitespace-nowrap">Hot offers</a>
+                <a href="./web-gridview.html" class="hover:text-blue-600 whitespace-nowrap">Gift boxes</a>
+                <a href="./web-gridview.html" class="hover:text-blue-600 whitespace-nowrap">Projects</a>
+                <a href="./web-gridview.html" class="hover:text-blue-600 whitespace-nowrap">Menu item</a>
+                <a href="./web-gridview.html" class="flex items-center gap-1 hover:text-blue-600 whitespace-nowrap">
                     Help <i class="fa-solid fa-chevron-down text-xs"></i>
                 </a>
             </div>
@@ -713,19 +713,19 @@
                         Best information about the company gies here but now lorem ipsum is
                     </p>
                     <div class="flex gap-2">
-                        <a href="#"
+                        <a href="./web-main.html"
                             class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i
                                 class="fa-brands fa-facebook-f text-sm"></i></a>
-                        <a href="#"
+                        <a href="./web-main.html"
                             class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i
                                 class="fa-brands fa-twitter text-sm"></i></a>
-                        <a href="#"
+                        <a href="./web-main.html"
                             class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i
                                 class="fa-brands fa-linkedin-in text-sm"></i></a>
-                        <a href="#"
+                        <a href="./web-main.html"
                             class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i
                                 class="fa-brands fa-instagram text-sm"></i></a>
-                        <a href="#"
+                        <a href="./web-main.html"
                             class="w-8 h-8 rounded-full bg-gray-300 text-white flex items-center justify-center hover:bg-gray-400 transition"><i
                                 class="fa-brands fa-youtube text-sm"></i></a>
                     </div>
@@ -736,40 +736,40 @@
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">About</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">About Us</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Find store</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Categories</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Blogs</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">About Us</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Find store</a></li>
+                            <li><a href="./web-gridview.html" class="hover:text-blue-600">Categories</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Blogs</a></li>
                         </ul>
                     </div>
 
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">Partnership</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">About Us</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Find store</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Categories</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Blogs</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">About Us</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Find store</a></li>
+                            <li><a href="./web-gridview.html" class="hover:text-blue-600">Categories</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Blogs</a></li>
                         </ul>
                     </div>
 
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">Information</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">Help Center</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Money Refund</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Shipping</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Contact us</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Help Center</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Money Refund</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Shipping</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Contact us</a></li>
                         </ul>
                     </div>
 
                     <div class="min-w-[120px]">
                         <h4 class="font-medium text-gray-800 mb-3">For users</h4>
                         <ul class="space-y-2 text-sm text-gray-500">
-                            <li><a href="#" class="hover:text-blue-600">Login</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Register</a></li>
-                            <li><a href="#" class="hover:text-blue-600">Settings</a></li>
-                            <li><a href="#" class="hover:text-blue-600">My Orders</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Login</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Register</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">Settings</a></li>
+                            <li><a href="./web-main.html" class="hover:text-blue-600">My Orders</a></li>
                         </ul>
                     </div>
                 </div>
@@ -778,14 +778,14 @@
                 <div class="w-full sm:w-auto">
                     <h4 class="font-medium text-gray-800 mb-3">Get app</h4>
                     <div class="flex flex-col gap-3">
-                        <a href="#" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
+                        <a href="./web-main.html" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
                             <i class="fa-brands fa-apple text-2xl"></i>
                             <div class="flex flex-col leading-none">
                                 <span class="text-[8px]">Download on the</span>
                                 <span class="text-xs font-semibold">App Store</span>
                             </div>
                         </a>
-                        <a href="#" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
+                        <a href="./web-main.html" class="bg-black text-white rounded px-3 py-2 flex items-center gap-2 w-[140px]">
                             <i class="fa-brands fa-google-play text-xl"></i>
                             <div class="flex flex-col leading-none">
                                 <span class="text-[8px]">GET IT ON</span>
