--- a/web-gridview.html
+++ b/web-gridview.html
@@ -63,7 +63,7 @@
         <div class="container mx-auto px-4 lg:px-6 py-4">
             <div class="flex flex-wrap items-center justify-between gap-4">
                 <!-- Logo -->
-                <a href="#" class="flex items-center gap-2 text-blue-500 hover:text-blue-600">
+                <a href="./web-main.html" class="flex items-center gap-2 text-blue-500 hover:text-blue-600">
                     <div class="w-10 h-10 bg-blue-100 rounded-lg flex items-center justify-center text-blue-600">
                         <i class="fa-solid fa-bag-shopping text-xl"></i>
                     </div>
@@ -88,19 +88,19 @@
 
                 <!-- User Actions -->
                 <div class="flex items-center gap-6 text-gray-500 text-xs">
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-gray-800">
+                    <a href="./web-main.html" class="flex flex-col items-center gap-1 hover:text-gray-800">
                         <i class="fa-solid fa-user text-lg text-gray-400"></i>
                         <span>Profile</span>
                     </a>
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-gray-800">
+                    <a href="./web-main.html" class="flex flex-col items-center gap-1 hover:text-gray-800">
                         <i class="fa-solid fa-comment-dots text-lg text-gray-400"></i>
                         <span>Message</span>
                     </a>
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-gray-800">
+                    <a href="./web-main.html" class="flex flex-col items-center gap-1 hover:text-gray-800">
                         <i class="fa-solid fa-heart text-lg text-gray-400"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="#" class="flex flex-col items-center gap-1 hover:text-gray-800">
+                    <a href="./web-cart.html" class="flex flex-col items-center gap-1 hover:text-gray-800">
                         <i class="fa-solid fa-cart-shopping text-lg text-gray-400"></i>
                         <span>My cart</span>
                     </a>
@@ -112,15 +112,15 @@
         <div class="border-t border-gray-200">
             <div class="container mx-auto px-4 lg:px-6 h-[50px] flex items-center justify-between text-sm font-medium">
                 <div class="flex items-center gap-8 overflow-x-auto">
-                    <a href="#" class="flex items-center gap-2 text-gray-800 hover:text-blue-600 whitespace-nowrap">
+                    <a href="./web-gridview.html" class="flex items-center gap-2 text-gray-800 hover:text-blue-600 whitespace-nowrap">
                         <i class="fa-solid fa-bars"></i>
                         All category
                     </a>
-                    <a href="#" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Hot offers</a>
-                    <a href="#" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Gift boxes</a>
-                    <a href="#" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Projects</a>
-                    <a href="#" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Menu item</a>
-                    <a href="#" class="flex items-center gap-1 text-gray-800 hover:text-blue-600 whitespace-nowrap">
+                    <a href="./web-gridview.html" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Hot offers</a>
+                    <a href="./web-gridview.html" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Gift boxes</a>
+                    <a href="./web-gridview.html" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Projects</a>
+                    <a href="./web-gridview.html" class="text-gray-800 hover:text-blue-600 whitespace-nowrap">Menu item</a>
+                    <a href="./web-gridview.html" class="flex items-center gap-1 text-gray-800 hover:text-blue-600 whitespace-nowrap">
                         Help
                         <i class="fa-solid fa-chevron-down text-xs"></i>
                     </a>
@@ -131,7 +131,7 @@
                         English, USD
                         <i class="fa-solid fa-chevron-down text-xs ml-1"></i>
                     </div>
-                    <div class="flex items-center gap-2 cursor-pointer text-gray-800">
+                    <div class="flex items-center gap-1 cursor-pointer text-gray-800">
                         Ship to 
                         <span class="text-lg leading-none">🇩🇪</span>
                         <i class="fa-solid fa-chevron-down text-xs"></i>
@@ -145,11 +145,11 @@
     <div class="bg-[#F7FAFC] py-4">
         <div class="container mx-auto px-4 lg:px-6">
             <nav class="text-gray-500 text-sm flex items-center gap-2 overflow-x-auto whitespace-nowrap">
-                <a href="#" class="hover:text-gray-800">Home</a>
+                <a href="./web-main.html" class="hover:text-gray-800">Home</a>
                 <i class="fa-solid fa-chevron-right text-xs text-gray-400"></i>
-                <a href="#" class="hover:text-gray-800">Clothings</a>
+                <a href="./web-gridview.html" class="hover:text-gray-800">Clothings</a>
                 <i class="fa-solid fa-chevron-right text-xs text-gray-400"></i>
-                <a href="#" class="hover:text-gray-800">Men's wear</a>
+                <a href="./web-gridview.html" class="hover:text-gray-800">Men's wear</a>
                 <i class="fa-solid fa-chevron-right text-xs text-gray-400"></i>
                 <span class="text-gray-400">Summer clothing</span>
             </nav>
@@ -170,11 +170,11 @@
                         <i class="fa-solid fa-chevron-up text-gray-500 text-xs"></i>
                     </div>
                     <ul class="space-y-2 text-gray-600 text-sm">
-                        <li><a href="#" class="hover:text-blue-600">Mobile accessory</a></li>
-                        <li><a href="#" class="hover:text-blue-600">Electronics</a></li>
-                        <li><a href="#" class="hover:text-blue-600">Smartphones</a></li>
-                        <li><a href="#" class="hover:text-blue-600">Modern tech</a></li>
-                        <li><a href="#" class="text-blue-500 hover:underline">See all</a></li>
+                        <li><a href="./web-gridview.html" class="hover:text-blue-600">Mobile accessory</a></li>
+                        <li><a href="./web-gridview.html" class="hover:text-blue-600">Electronics</a></li>
+                        <li><a href="./web-gridview.html" class="hover:text-blue-600">Smartphones</a></li>
+                        <li><a href="./web-gridview.html" class="hover:text-blue-600">Modern tech</a></li>
+                        <li><a href="./web-gridview.html" class="text-blue-500 hover:underline">See all</a></li>
                     </ul>
                 </div>
 
@@ -207,7 +207,7 @@
                             <input type="checkbox" class="form-checkbox text-blue-600 rounded">
                             <span>Lenovo</span>
                         </label>
-                        <a href="#" class="text-blue-500 hover:underline block mt-1">See all</a>
+                        <a href="./web-gridview.html" class="text-blue-500 hover:underline block mt-1">See all</a>
                     </div>
                 </div>
 
@@ -240,7 +240,7 @@
                             <input type="checkbox" class="form-checkbox text-blue-600 rounded">
                             <span>Large Memory</span>
                         </label>
-                        <a href="#" class="text-blue-500 hover:underline block mt-1">See all</a>
+                        <a href="./web-gridview.html" class="text-blue-500 hover:underline block mt-1">See all</a>
                     </div>
                 </div>
 
@@ -314,7 +314,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-regular fa-star text-gray-300"></i>
+                                <i class="fa-solid fa-star text-gray-300"></i>
                             </div>
                         </label>
                         <label class="flex items-center gap-3 cursor-pointer">
@@ -376,12 +376,12 @@
                         </div>
 
                         <div class="flex border border-gray-300 rounded overflow-hidden">
-                            <button class="bg-gray-100 px-3 py-1.5 text-gray-800 hover:bg-gray-200">
+                            <a href="./web-gridview.html" class="bg-gray-100 px-3 py-1.5 text-gray-800 hover:bg-gray-200">
                                 <i class="fa-solid fa-border-all"></i>
-                            </button>
-                            <button class="bg-white px-3 py-1.5 text-gray-400 hover:bg-gray-50 border-l border-gray-300">
+                            </a>
+                            <a href="./web-listview.html" class="bg-white px-3 py-1.5 text-gray-400 hover:bg-gray-50 border-l border-gray-300">
                                 <i class="fa-solid fa-bars"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -403,7 +403,6 @@
                     <div class="flex items-center gap-2 px-2 py-1 bg-white border border-blue-300 rounded text-sm text-gray-600">
                         <span>Metallic</span>
                         <i class="fa-solid fa-xmark text-gray-400 cursor-pointer hover:text-red-500"></i>
-                    </div>
                     <div class="flex items-center gap-2 px-2 py-1 bg-white border border-blue-300 rounded text-sm text-gray-600">
                         <span>4 star</span>
                         <i class="fa-solid fa-xmark text-gray-400 cursor-pointer hover:text-red-500"></i>
@@ -412,7 +411,7 @@
                         <span>3 star</span>
                         <i class="fa-solid fa-xmark text-gray-400 cursor-pointer hover:text-red-500"></i>
                     </div>
-                    <a href="#" class="text-blue-500 text-sm hover:underline ml-2">Clear all filter</a>
+                    <a href="./web-gridview.html" class="text-blue-500 text-sm hover:underline ml-2">Clear all filter</a>
                 </div>
 
                 <!-- Product Grid -->
@@ -698,9 +697,8 @@
 
             </main>
         </div>
-    </div>
 
-    <!-- Newsletter Section -->
+ <!-- Newsletter Section -->
     <div class="bg-gray-100 py-10 text-center">
         <div class="container mx-auto px-4">
             <h3 class="text-xl font-bold text-gray-800 mb-2">Subscribe on our newsletter</h3>
