--- a/web-listview.html
+++ b/web-listview.html
@@ -147,7 +147,7 @@
         <!-- Top Section -->
         <div class="container mx-auto max-w-[1180px] px-4 py-5 flex items-center justify-between gap-8">
             <!-- Logo -->
-            <a href="#" class="flex items-center gap-2 flex-shrink-0">
+            <a href="./web-main.html" class="flex items-center gap-2 flex-shrink-0">
                 <div class="w-10 h-10 bg-[#0D6EFD] rounded-lg flex items-center justify-center text-white text-xl">
                     <i class="fa-solid fa-bag-shopping"></i>
                 </div>
@@ -455,14 +455,24 @@
                             <i class="fa-solid fa-chevron-down text-gray-500 text-xs"></i>
                         </div>
 
+                        
                         <div class="flex border border-gray-300 rounded overflow-hidden">
+                            <a href="./web-gridview.html" class="bg-gray-100 px-3 py-1.5 text-gray-800 hover:bg-gray-200">
+                                <i class="fa-solid fa-border-all"></i>
+                            </a>
+                            <a href="./web-listview.html" class="bg-white px-3 py-1.5 text-gray-400 hover:bg-gray-50 border-l border-gray-300">
+                                <i class="fa-solid fa-bars"></i>
+                            </a>
+                        </div>
+
+                        <!-- <div class="flex border border-gray-300 rounded overflow-hidden">
                             <button class="p-2 bg-gray-100 text-[#1C1C1C] hover:bg-gray-200">
                                 <i class="fa-solid fa-border-all"></i>
                             </button>
                             <button class="p-2 bg-white text-gray-500 hover:bg-gray-50 border-l border-gray-300">
                                 <i class="fa-solid fa-bars"></i>
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
